fix: stop checkboxes causing overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,5 +30,5 @@ code {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow-x: hidden;
+
 }
