--- a/client/src/pages/table-view/TableView.scss
+++ b/client/src/pages/table-view/TableView.scss
@@ -207,7 +207,7 @@
 }
 
 input[type="checkbox"] {
-  position: absolute;
+  position: relative;
   visibility: hidden;
 }
 
